Merge branch 'main' of https://github.com/apache/ignite-3 into ignite-17676
# Conflicts:
#	modules/affinity/src/test/java/org/apache/ignite/internal/affinity/AffinityManagerTest.java
#	modules/client-common/src/main/java/org/apache/ignite/client/proto/ClientMsgPackType.java
#	modules/configuration/src/main/java/org/apache/ignite/internal/configuration/ConfigurationChanger.java
#	modules/configuration/src/main/java/org/apache/ignite/internal/configuration/SuperRoot.java
#	modules/configuration/src/main/java/org/apache/ignite/internal/configuration/asm/ConfigurationAsmGenerator.java
#	modules/configuration/src/main/java/org/apache/ignite/internal/configuration/asm/SchemaClassesInfo.java
#	modules/configuration/src/main/java/org/apache/ignite/internal/configuration/hocon/HoconConfigurationVisitor.java
#	modules/configuration/src/main/java/org/apache/ignite/internal/configuration/hocon/HoconConverter.java
#	modules/configuration/src/main/java/org/apache/ignite/internal/configuration/tree/ConfigurationVisitorImpl.java
#	modules/configuration/src/main/java/org/apache/ignite/internal/configuration/tree/ConverterToMapVisitor.java
#	modules/configuration/src/main/java/org/apache/ignite/internal/configuration/util/ConfigurationUtil.java
#	modules/configuration/src/test/java/org/apache/ignite/internal/configuration/util/ConfigurationUtilTest.java
#	modules/core/src/main/java/org/apache/ignite/internal/util/CollectionUtils.java
#	modules/runner/src/main/java/org/apache/ignite/internal/app/IgniteImpl.java
#	modules/schema/src/main/java/org/apache/ignite/internal/schema/SchemaDescriptor.java
#	modules/table/src/main/java/org/apache/ignite/internal/table/distributed/TableManager.java
#	modules/table/src/test/java/org/apache/ignite/internal/table/KVBinaryViewOperationsTest.java
#	modules/table/src/test/java/org/apache/ignite/internal/table/TupleBuilderImplTest.java