@@ -23,6 +23,7 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
@@ -41,6 +42,7 @@ import org.apache.ignite.internal.affinity.AffinityManager;
 import org.apache.ignite.internal.baseline.BaselineManager;
 import org.apache.ignite.internal.configuration.ConfigurationManager;
 import org.apache.ignite.internal.configuration.ConfigurationRegistry;
+import org.apache.ignite.internal.configuration.schema.ExtendedTableConfigurationSchema;
 import org.apache.ignite.internal.manager.IgniteComponent;
 import org.apache.ignite.internal.metastorage.MetaStorageManager;
 import org.apache.ignite.internal.processors.query.calcite.SqlQueryProcessor;
@@ -173,6 +175,7 @@ public class IgniteImpl implements Ignite {
             raftMgr
         );
 
+        // TODO: IGNITE-15414 Schema validation refactoring with configuration validators.
         clusterCfgMgr = new ConfigurationManager(
             Arrays.asList(
                 ClusterConfiguration.KEY,
@@ -180,7 +183,7 @@ public class IgniteImpl implements Ignite {
             ),
             Map.of(),
             new DistributedConfigurationStorage(metaStorageMgr, vaultMgr),
-            List.of()
+            Collections.singletonList(ExtendedTableConfigurationSchema.class)
         );
 
         baselineMgr = new BaselineManager(
@@ -189,22 +192,13 @@ public class IgniteImpl implements Ignite {
             clusterSvc
         );
 
-        affinityMgr = new AffinityManager(
-            clusterCfgMgr,
-            metaStorageMgr,
-            baselineMgr
-        );
+        affinityMgr = new AffinityManager(baselineMgr);
 
-        schemaMgr = new SchemaManager(
-            clusterCfgMgr,
-            metaStorageMgr,
-            vaultMgr
-        );
+        schemaMgr = new SchemaManager();
 
         distributedTblMgr = new TableManager(
             nodeCfgMgr,
             clusterCfgMgr,
-            metaStorageMgr,
             schemaMgr,
             affinityMgr,
             raftMgr,
@@ -322,8 +316,8 @@ public class IgniteImpl implements Ignite {
         });
 
         if (explicitStop.get()) {
-            doStopNode(List.of(vaultMgr, nodeCfgMgr, clusterSvc, raftMgr, metaStorageMgr,
-                clusterCfgMgr, baselineMgr, affinityMgr, schemaMgr, distributedTblMgr, qryEngine, restModule, clientHandlerModule));
+            doStopNode(List.of(vaultMgr, nodeCfgMgr, clusterSvc, raftMgr, metaStorageMgr, clusterCfgMgr, baselineMgr,
+                affinityMgr, schemaMgr, distributedTblMgr, qryEngine, restModule, clientHandlerModule));
         }
     }
 
